Base/n8n/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  # annotations:
    # kubernetes.io/ingress.class: ingress-nginx
spec:
  rules:
  - host: n8n.local.gd
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: n8n
            port:
              number: 80
